--- a/PixelSort/app/src/main/res/layout/activity_login.xml
+++ b/PixelSort/app/src/main/res/layout/activity_login.xml
@@ -159,7 +159,9 @@
             android:layout_marginBottom="10dp"
             android:width="400dp"
             android:height="75dp"
+            android:backgroundTint="#FFFFFF"
             android:text="Log In"
+            android:textColor="#000000"
             android:textSize="20dp" />
     </LinearLayout>
 </RelativeLayout>
