--- a/PixelSort/app/src/main/res/layout/activity_photos.xml
+++ b/PixelSort/app/src/main/res/layout/activity_photos.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,49 +13,52 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#E6333333"
-        android:orientation="vertical"></LinearLayout>
+        android:orientation="vertical"/>
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/headernav"
         android:layout_width="match_parent"
         android:layout_height="65dp"
-        android:layout_alignParentTop="true"
+        android:orientation="horizontal"
         android:background="@drawable/topnavbar"
-        android:id="@+id/headernav">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <TextView
-            android:id="@+id/photosTitle"
+            android:id="@+id/headerTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="16dp"
-            android:text="Photos"
+            android:layout_marginLeft="10dp"
+            android:text="Profile"
             android:textSize="26dp"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/headernav"/>
 
         <ImageView
             android:id="@+id/profile"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
             android:layout_marginRight="16dp"
-            app:srcCompat="@drawable/icon_profile" />
-    </RelativeLayout>
+            android:gravity="end"
+            app:srcCompat="@drawable/icon_profile"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/headernav"/>
 
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerGalleryImages"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/headernav"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
+        android:id="@+id/footernav"
         android:layout_width="match_parent"
         android:layout_height="65dp"
-        android:layout_alignParentBottom="true"
         android:orientation="horizontal"
         android:background="@drawable/bottomnavbar"
-        android:id="@+id/footernav">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <ImageView
             android:id="@+id/photos"
@@ -85,4 +88,15 @@
     </LinearLayout>
 
 
-</RelativeLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_below="@+id/headernav"
+        android:id="@+id/recyclerGalleryImages"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:padding="6dp"
+        app:layout_constraintTop_toBottomOf="@id/headernav"
+        app:layout_constraintBottom_toTopOf="@id/footernav"
+        />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
