--- a/PixelSort/app/src/main/res/layout/activity_albums.xml
+++ b/PixelSort/app/src/main/res/layout/activity_albums.xml
@@ -87,4 +87,24 @@
             app:srcCompat="@drawable/icon_albums" />
     </LinearLayout>
 
+    <Button
+        android:id="@+id/createNewAlbum"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:layout_marginBottom="10dp"
+        android:text="Create New Album"
+        app:backgroundTint="@null"
+        android:background="#26FFFFFF"
+        app:layout_constraintTop_toBottomOf="@+id/headernav"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recylerAlbums"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:padding="6dp"
+        app:layout_constraintTop_toBottomOf="@id/createNewAlbum"
+        app:layout_constraintBottom_toTopOf="@id/footernav" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
