--- a/PixelSort/app/src/main/res/layout/activity_albums.xml
+++ b/PixelSort/app/src/main/res/layout/activity_albums.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/trees"
     android:orientation="vertical"
-    tools:context=".Albums">
+    tools:context=".AlbumsActivity">
 
     <LinearLayout
         android:id="@+id/opacityBackground"
