--- a/PixelSort/app/src/main/res/layout/activity_login.xml
+++ b/PixelSort/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/trees"
-    tools:context=".Login">
+    tools:context=".LoginActivity">
 
     <LinearLayout
         android:id="@+id/opacityBackground"
