--- a/PixelSort/app/src/main/res/layout/activity_register.xml
+++ b/PixelSort/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/trees"
-    tools:context=".Register">
+    tools:context=".RegisterActivity">
 
     <LinearLayout
         android:id="@+id/opacityBackground"
