--- a/PixelSort/app/src/main/res/layout/add_photos.xml
+++ b/PixelSort/app/src/main/res/layout/add_photos.xml
@@ -4,12 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/trees"
+    android:orientation="vertical"
     tools:context=".addPhotos">
+
+    <LinearLayout
+        android:id="@+id/opacityBackground"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#E6333333"
+        android:orientation="vertical"/>
 
     <ImageView
         android:id="@+id/viewPhoto"
-        android:layout_width="345dp"
-        android:layout_height="404dp"
+        android:layout_width="375dp"
+        android:layout_height="375dp"
+        android:layout_marginTop="150dp"
         app:layout_constraintBottom_toTopOf="@+id/browsePhotos"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,8 +30,11 @@
         android:id="@+id/browsePhotos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="48dp"
+        android:layout_marginTop="45dp"
         android:text="Browse Photos"
+        android:background="#26FFFFFF"
+        app:backgroundTint="@null"
+        app:layout_constraintTop_toBottomOf="@+id/viewPhoto"
         app:layout_constraintBottom_toTopOf="@+id/uploadPhoto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -30,9 +43,11 @@
         android:id="@+id/uploadPhoto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
         android:text="Upload"
-        app:layout_constraintBottom_toTopOf="@+id/footernav"
+        android:layout_marginTop="10dp"
+        android:background="#26FFFFFF"
+        app:backgroundTint="@null"
+        app:layout_constraintTop_toBottomOf="@+id/browsePhotos"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
@@ -41,9 +56,8 @@
         android:id="@+id/footernav"
         android:layout_width="match_parent"
         android:layout_height="65dp"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/bottomnavbar"
         android:orientation="horizontal"
+        android:background="@drawable/bottomnavbar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -52,28 +66,26 @@
             android:id="@+id/photos"
             android:layout_width="wrap_content"
             android:layout_height="55dp"
-            android:layout_marginLeft="40dp"
             android:layout_marginTop="5dp"
+            android:layout_marginLeft="40dp"
             android:layout_weight="1"
             app:srcCompat="@drawable/icon_photos" />
-
         <ImageView
             android:id="@+id/search"
             android:layout_width="wrap_content"
             android:layout_height="55dp"
-            android:layout_marginLeft="40dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="40dp"
             android:layout_weight="1"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
             app:srcCompat="@drawable/icon_search" />
-
         <ImageView
             android:id="@+id/albums"
             android:layout_width="wrap_content"
             android:layout_height="55dp"
+            android:layout_weight="1"
             android:layout_marginTop="5dp"
             android:layout_marginRight="40dp"
-            android:layout_weight="1"
             app:srcCompat="@drawable/icon_albums" />
     </LinearLayout>
 
