--- a/PixelSort/app/src/main/res/layout/activity_main.xml
+++ b/PixelSort/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,56 +12,78 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#2Fbdc3c7"
-        android:orientation="vertical"></LinearLayout>
+        android:orientation="vertical"/>
 
-    <TextView
-        android:id="@+id/pixelSort"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="PixelSort"
-        android:textSize="40dp"
-        android:textColor="@color/black"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"/>
 
-    <TextView
-        android:id="@+id/photoOrganizer"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/pixelSort"
-        android:text="Photo Organizer"
-        android:textSize="25dp"
-        android:textColor="@color/black"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"/>
+        android:orientation="vertical"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="150dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
-    <Button
-        android:id="@+id/signIn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="10dp"
-        android:width="180dp"
-        android:height="75dp"
-        android:backgroundTint="#FFFFFF"
-        android:text="Log In"
-        android:textColor="#000000"
-        android:textSize="20dp" />
+        <TextView
+            android:id="@+id/pixelSort"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="PixelSort"
+            android:textSize="40dp"
+            android:textColor="@color/black" />
+        <View
+            android:id="@+id/line1"
+            android:background="#000000"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="25dp"
+            android:layout_marginLeft="25dp" />
 
-    <Button
-        android:id="@+id/signUp"
-        android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/photoOrganizer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Photo Organizer"
+            android:textSize="25dp"
+            android:textColor="@color/black" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"
-        android:width="180dp"
-        android:height="75dp"
-        android:backgroundTint="#000000"
-        android:text="Register"
-        android:textColor="#FFFFFF"
-        android:textSize="20dp" />
-</RelativeLayout>
+        android:layout_marginBottom="16dp"
+        android:orientation="horizontal"
+        android:gravity="center_horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <Button
+            android:id="@+id/signIn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:width="180dp"
+            android:height="75dp"
+            android:backgroundTint="#FFFFFF"
+            android:text="Log In"
+            android:textColor="#000000"
+            android:textSize="20dp" />
+
+        <Button
+            android:id="@+id/signUp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:width="180dp"
+            android:height="75dp"
+            android:backgroundTint="#000000"
+            android:text="Register"
+            android:textColor="#FFFFFF"
+            android:textSize="20dp" />
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
