--- a/PixelSort/app/src/main/res/layout/activity_photos.xml
+++ b/PixelSort/app/src/main/res/layout/activity_photos.xml
@@ -96,8 +96,7 @@
         android:background="#26FFFFFF"
         app:layout_constraintTop_toBottomOf="@+id/headernav"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerGalleryImages"
@@ -106,8 +105,6 @@
         android:layout_height="0dp"
         android:padding="6dp"
         app:layout_constraintTop_toBottomOf="@id/addPhoto"
-        app:layout_constraintBottom_toTopOf="@id/footernav"
-        />
-
+        app:layout_constraintBottom_toTopOf="@id/footernav" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
