--- a/PixelSort/app/src/main/res/layout/activity_register.xml
+++ b/PixelSort/app/src/main/res/layout/activity_register.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -22,36 +22,57 @@
         android:textSize="15dp"
         android:textColor="@color/black"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
-    <TextView
-        android:id="@+id/pixelSort"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/title"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="PixelSort"
-        android:textSize="40dp"
-        android:textColor="@color/black"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"/>
+        android:orientation="vertical"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="60dp"
+        android:layout_marginBottom="60dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/opacityBackground2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
-    <TextView
-        android:id="@+id/photoOrganizer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/pixelSort"
-        android:text="Photo Organizer"
-        android:textSize="25dp"
-        android:textColor="@color/black"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"/>
+        <TextView
+            android:id="@+id/pixelSort"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="PixelSort"
+            android:textSize="40dp"
+            android:textColor="@color/black" />
+        <View
+            android:id="@+id/line1"
+            android:background="#000000"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="25dp"
+            android:layout_marginLeft="25dp" />
+
+        <TextView
+            android:id="@+id/photoOrganizer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Photo Organizer"
+            android:textSize="25dp"
+            android:textColor="@color/black" />
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/opacityBackground2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="145dp"
+        android:layout_height="0dp"
         android:background="#8F000000"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@id/title"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <TextView
             android:id="@+id/register"
@@ -163,34 +184,33 @@
             android:hint="password1"
             android:textColorHint="@color/white"
             android:textColor="@color/white" />
-
-        <TextView
-            android:id="@+id/availableAccount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/signIn"
-            android:layout_gravity="center"
-            android:layout_marginTop="30dp"
-            android:layout_marginBottom="30dp"
-            android:text="I have an account"
-            android:textColor="@color/white"
-            android:textSize="18dp" />
-
-        <Button
-            android:id="@+id/signUp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/noAccount"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"
-            android:width="400dp"
-            android:height="75dp"
-            android:backgroundTint="#000000"
-            android:text="Register"
-            android:textColor="#FFFFFF"
-            android:textSize="20dp" />
     </LinearLayout>
-</RelativeLayout>
+
+    <TextView
+        android:id="@+id/availableAccount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:text="I have an account"
+        android:textColor="@color/white"
+        android:textSize="18dp"
+        app:layout_constraintBottom_toTopOf="@id/signUp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/signUp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:width="400dp"
+        android:height="75dp"
+        android:backgroundTint="#FFFFFF"
+        android:text="Register"
+        android:textColor="#000000"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
