Add remove images option

--- a/PixelSort/app/src/main/res/layout/gallery_item.xml
+++ b/PixelSort/app/src/main/res/layout/gallery_item.xml
@@ -9,12 +9,39 @@
     android:elevation="8dp"
     app:cardCornerRadius="8dp">
 
+    <androidx.constraintlayout.widget.ConstraintLayout android:layout_height="match_parent" android:layout_width="wrap_content">
+
+        <ImageView
+            android:id="@+id/filterImage"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:background="#70bdc3c7"
+            android:scaleType="centerCrop"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/images"
+            app:layout_constraintEnd_toEndOf="@+id/images"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="center"
         android:scaleType="centerCrop"
         android:id="@+id/images" />
+
+        <ImageView
+            android:id="@+id/removeImage"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="center"
+            android:scaleType="centerCrop"
+            android:visibility="gone"
+            android:src="@drawable/remove_image"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </androidx.cardview.widget.CardView>
